# llm-supported-task-managment-tool

./: .env  .gitignore  BUSINESS_DOCUMENTATION.md  BUSINESS_SUMMARY.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3791f28fd752_first_migration.py  381dad29cac2_fix_relationships.py  46e194a55683_merge_multiple_heads.py  5ff1349a531a_merge_multiple_heads.py  812705579786_migrations_made.py  843cdeb35da5_initial_migration.py  ba1cd742d27b_migrations_made.py  bae6ceca1408_migrations_made.py
core/: authentication.py  config.py  database.py  database_async.py  security.py
llm/routes/: routes_v1.py
llm/services/: qwen_service_ollama.py
projects/models/: models_v1.py
projects/repositories/: base.py  project_repositories_v1.py  repositories_v1.py  task_repositories_v1.py
projects/routes/: project_routes_v1.py  routes_v1.py  task_routes_v1.py
projects/schemas/: project_schemas_v1.py  schemas_v1.py  task_schemas_v1.py
projects/utils/: enum.py
reports/models/: models_v1.py
reports/routes/: routes_v1.py
reports/schemas/: schemas_v1.py
teams/: README.md
teams/models/: models_v1.py
teams/repositories/: repository_v1.py
teams/routes/: routes_v1.py
teams/schemas/: schemas_v1.py
teams/services/: services_v1.py
users/models/: models_v1.py
users/repositories/: repository_v1.py
users/routes/: routes_v1.py
users/schemas/: schemas_v1.py
users/services/: service_v1.py
users/utils/: enum.py
