[project]
name = "llm-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.124.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "passlib[bcrypt]>=1.7.4",
    "requests>=2.32.5",
    "psycopg[binary]>=3.3.2",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt==3.2.2",
    "cachetools>=6.2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]


[tool.ruff]
target-version = "py312"

#[tool.ruff.lint]
# to enable specific rules
# E = pycodestyle errors (formatting)
# F = Pyflakes (bugs like unused variables)
# I = isort (sorting imports automatically)
# B = flake8-bugbear (common bugs)
#select = ["E", "F", "I", "B"]

#to ignore specific rules if they are annoying
lint.ignore = []

#[tool.ruff.format]
#Use double quotes for strings
#quote-style = "double"
